@@ -3,7 +3,8 @@ Broker:
   rather than letting the bridge fail later. Issue #1635.
 
 Client library:
-- Don't treat an unexpected PUBREL as a fatal error. Issue #1629.
+- Don't treat an unexpected PUBACK, PUBREL, or PUBCOMP as a fatal error.
+  Issue #1629.
 
 Build:
 - Various fixes for building with <C99 support. Closes #1622.
